WIP experiment with using test-suites for xVtests